Revision history for Perl module CPAN::Mini::Webserver:

     - show metadata on distribution pages (patch by martijn)
     - port can now be configured with --port command line option (tokuhirom, miyagawa, MARTIJN)
     - does Bonjour publishing if HTTP::Server::Simple::Bonjour is installed (miyagawa)

0.36 Thu Aug 14 16:20:53 CEST 2008
     - improve searching, you can now search for "buffy -test"
     - make links to modules in the pod and source point back
       to minicpan_webserver instead of to search.cpan.org
       (patch by martijn)
     - make code highlighting darker
     - change the port to 2963 (thanks to clkao)
     - syntax highlight *.t files (thanks to mfowler)

0.35 Tue Aug 12 07:30:28 BST 2008
     - remove failing pod.t test due to bugs in Pod::Simple
       (spotted by rsavage)
     - handle *.tgz as well as *.tar.gz (patch by rsavage)

0.34 Fri Aug  8 18:00:32 BST 2008
     - mention the subversion repository and the mailing list
     - require Template::Declare 0.29 (spotted by evdb)
     - require HTTP::Server::Simple 0.34 (spotted by ranguard)
     - added favicon
     - hide POD errors
     - add an opensearch plugin (such as Firefox's search bar)
     - skip tests unless there is an existing mirror
     - fix package links to go to a best-guess filename (and tests)

0.33 Fri Aug  8 08:00:12 BST 2008
     - require at least CPAN::Mini 0.565 as we need CPAN::Mini::App
       (noticed by bricas)
     - glob the local directory name (like CPAN::Mini does) to make 
       ~/my-little-cpan work (patch by Andy Armstrong) 

0.32 Sat Aug  2 19:27:12 BST 2008
     - initial release